--- a/particle_life.html
+++ b/particle_life.html
@@ -86,9 +86,9 @@
           const dx = a.x - b.x;
           const dy = a.y - b.y;
           if (dx !== 0 || dy !== 0) {
-            const d = Math.sqrt(dx * dx + dy * dy);
-            if (d < 80) {
-              const F = g / d;
+            const d = dx * dx + dy * dy;
+            if (d < 6400) {
+              const F = g / Math.sqrt(d);
               fx += F * dx;
               fy += F * dy;
             }
