--- a/particle_life.html
+++ b/particle_life.html
@@ -1,6 +1,9 @@
 <html>
 
   <head>
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <style>
       :root {
         /* background-color: black; */
