--- a/particle_life.html
+++ b/particle_life.html
@@ -86,22 +86,25 @@
       // };
 
       // Generate Random Rules
-      function RandomRules(_factor = 1) {
-        // white, orange, red, yellow, green, cyan, blue, purple, gray, brown, pink, 
-        // lime, crimson, teal, 
-        const colors = ["yellow", "red", "green", "blue"];
+      //    eg. RandomRules( ["yellow", "red", "green", "blue"], 5)
+      //        range = 5,  generates -5 to 5
+      function RandomRules( colors, range = 1) {
+        // Colors examples: 
+        // white, orange, red, yellow, green, cyan, blue, purple, gray, brown, pink, lime, crimson, teal,
+        // #FFF, #f58e05
         const randomNum = () => Math.random() * 2 - 1;
-        var _rules = {}
-        colors.forEach(MainColor => {
-          _rules[MainColor] = {}
-          colors.forEach(subColor => {
-            _rules[MainColor][subColor] = randomNum() * _factor;
-          })
+        const _rules = {};
+        colors.forEach(atomColor => {
+          _rules[atomColor] = {}
+          colors.forEach(ruleColor => {
+            _rules[atomColor][ruleColor] = randomNum() * range;
+          });
         });
         return _rules
       };
 
-      const RULES = RandomRules(5);
+      const colors = ["yellow", "red", "green", "blue"];
+      const RULES = RandomRules(colors, 5);
 
       console.log(JSON.stringify(RULES, null, 4));
     </script>
