--- a/particle_life.html
+++ b/particle_life.html
@@ -27,110 +27,141 @@
 <body>
 
     <canvas id="canvas"></canvas>
+    <script src="https://cdn.jsdelivr.net/npm/lil-gui@0.17"></script>
 
     <script>
-        // governing parameters
-        var seed = 91651088029;
-        const Colors = ['green', 'red', 'yellow', 'blue']; // four particle types
-        // const Colors = ['green', 'red', 'yellow'];
-        // const Colors = ['green', 'red'];
-        let time_scale = 1.0;
-        var cutOff = 6400; // interaction distance cut-off
-        const viscosity = 0.7; // speed-dampening
-        const pulseDuration = 10;
-    </script>
+        const settings = {
+            seed: 91651088029,
+            fps: 0,
+            atomsPerColor: 500,
+            rules: {},
+            rulesArray: [],
+            colors: ['green', 'red', 'yellow', 'blue'],
+            time_scale: 1.0,
+            cutOff: 6400, // interaction distance cut-off
+            viscosity: 0.7, // speed-dampening
+            pulseDuration: 10,
+            'Reset': () => {
+                randomAtoms(settings.atomsPerColor, true)
+            },
+            'Random Rules': () => {
+                randomRules()
+                randomAtoms(settings.atomsPerColor, true)
+                updateGUIDisplay()
+            },
+            'Symmetric Rules': () => {
+                symmetricRules()
+                randomAtoms(settings.atomsPerColor, true)
+                updateGUIDisplay()
+            },
+            gui: null
+        }
 
-    <script>
+        const setupClicks = () => {
+            window.addEventListener('click',
+                (e) => {
+                    pulse = settings.pulseDuration;
+                    pulse_x = e.clientX;
+                    pulse_y = e.clientY;
+                }
+            )
+        }
+        const updateGUIDisplay = () => {
+            console.log('gui', settings.gui)
+            settings.gui.destroy()
+            setupGUI()
+        }
+        const setupGUI = () => {
+            settings.gui = new lil.GUI()
+            const configFolder = settings.gui.addFolder('Config')
+            configFolder.add(settings, 'Reset')
+            configFolder.add(settings, 'Random Rules')
+            configFolder.add(settings, 'Symmetric Rules')
+            configFolder.add(settings, 'seed').listen()
+            configFolder.add(settings, 'fps').listen().disable()
+            configFolder.add(settings, 'atomsPerColor', 1, 1000, 1).listen().onFinishChange(v => {
+                randomAtoms(v, true)
+            })
+            configFolder.add(settings, 'time_scale', 1, 10, 0.1).listen()
+            configFolder.add(settings, 'cutOff', 5000, 200000, 1000).listen()
+            configFolder.add(settings, 'viscosity', 0.1, 2, 0.1).listen()
+            configFolder.add(settings, 'pulseDuration', 1, 100, 1).listen()
+
+            for (const c of settings.colors) {
+                const colorFolder = settings.gui.addFolder(`Rules: ${c}`)
+                for (const c2 of settings.colors) {
+                    colorFolder.add(settings.rules[c], c2, -1, 1, 0.001).listen().onFinishChange(v => {
+                        flattenRules()
+                    })
+                }
+            }
+
+
+        }
+
+
         // Seedable 'decent' random generator
         function mulberry32() {
-            var t = seed += 0x6D2B79F5;
+            var t = settings.seed += 0x6D2B79F5;
             t = Math.imul(t ^ t >>> 15, t | 1);
             t ^= t + Math.imul(t ^ t >>> 7, t | 61);
             return ((t ^ t >>> 14) >>> 0) / 4294967296.;
         }
-        var hash = window.location.hash;
-        if (hash != undefined && hash[0] == '#') {
-            var param = Number(hash.substr(1)); // remove the leading '#'
-            if (isFinite(param)) {
-                seed = param;
-                console.log("Using seed " + seed);
-            }
-        }
-    </script>
 
-    <script>
-        // Rules values
-        const RULES = {};
-        let RULES_ARRAY = []
-
-        function randomRules() {
-            if (!isFinite(seed)) seed = 0xcafecafe;
-            console.log("Seed=" + seed);
-            window.location.hash = "#" + seed;
-            for (var i of Colors) {
-                RULES[i] = {};
-                for (var j of Colors) {
-                    RULES[i][j] = mulberry32() * 2 - 1;
+        function loadSeedFromUrl() {
+            var hash = window.location.hash;
+            if (hash != undefined && hash[0] == '#') {
+                var param = Number(hash.substr(1)); // remove the leading '#'
+                if (isFinite(param)) {
+                    settings.seed = param;
+                    console.log("Using seed " + settings.seed);
                 }
             }
-            console.log(JSON.stringify(RULES));
-            time_scale = 1.;
+        }
+
+        function randomRules() {
+            if (!isFinite(settings.seed)) settings.seed = 0xcafecafe;
+            console.log("Seed=" + settings.seed);
+            window.location.hash = "#" + settings.seed;
+            for (var i of settings.colors) {
+                settings.rules[i] = {};
+                for (var j of settings.colors) {
+                    settings.rules[i][j] = mulberry32() * 2 - 1;
+                }
+            }
+            console.log(JSON.stringify(settings.rules));
+            // settings.time_scale = 1.;
+            flattenRules()
         }
 
         function symmetricRules() {
-            for (var i of Colors) {
-                for (var j of Colors) {
+            for (var i of settings.colors) {
+                for (var j of settings.colors) {
                     if (j < i) {
-                        let v = 0.5 * (RULES[i][j] + RULES[j][i]);
-                        RULES[i][j] = RULES[j][i] = v;
+                        let v = 0.5 * (settings.rules[i][j] + settings.rules[j][i]);
+                        settings.rules[i][j] = settings.rules[j][i] = v;
                     }
                 }
             }
-            console.log(JSON.stringify(RULES));
-        }
-
-        function printRules() {
-            for (var i of Colors) {
-                let str = "";
-                for (var j of Colors) str += TwoDigits(RULES[i][j]) + " ";
-                console.log(str);
-            }
+            console.log(JSON.stringify(settings.rules));
+            flattenRules()
         }
 
         function flattenRules() {
-            for (let i = 0; i < Colors.length; i++) {
+            settings.rulesArray = []
+            for (let i = 0; i < settings.colors.length; i++) {
                 const ruleRow = []
-                for (let j = 0; j < Colors.length; j++) {
-                    ruleRow.push(RULES[Colors[i]][Colors[j]])
+                for (let j = 0; j < settings.colors.length; j++) {
+                    ruleRow.push(settings.rules[settings.colors[i]][settings.colors[j]])
                 }
-                RULES_ARRAY.push(ruleRow)
+                settings.rulesArray.push(ruleRow)
             }
         }
-    </script>
-
-    <script>
-        // Canvas
-        const canvas = document.getElementById('canvas');
-
-        // Canvas Dimensions
-        updateCanvasDimensions()
 
         function updateCanvasDimensions() {
             canvas.width = window.innerWidth * 0.9;
             canvas.height = window.innerHeight * 0.9;
         }
-
-        const m = canvas.getContext("2d");
-        const draw = (x, y, c, s) => {
-            m.fillStyle = c;
-            m.fillRect(x, y, s, s);
-        };
-
-        // Atoms array
-        const atoms = [];
-
-
-
 
         // Initiate Random locations for Atoms ( used when atoms created )
         function randomX() {
@@ -156,10 +187,29 @@
 
         function randomAtoms(number_of_atoms_per_color, clear_previous) {
             if (clear_previous) atoms.length = 0;
-            for (let c = 0; c < Colors.length; c++) {
+            for (let c = 0; c < settings.colors.length; c++) {
                 create(number_of_atoms_per_color, c)
             }
         }
+
+
+
+
+        // Run Application
+        loadSeedFromUrl()
+
+        // Canvas
+        const canvas = document.getElementById('canvas');
+        const m = canvas.getContext("2d");
+        const draw = (x, y, c, s) => {
+            m.fillStyle = c;
+            m.fillRect(x, y, s, s);
+        }
+        // Canvas Dimensions
+        updateCanvasDimensions()
+
+
+
 
 
         // Apply Rules ( How atoms interact with each other )
@@ -177,13 +227,13 @@
                 for (let j = 0; j < atoms.length; j++) {
                     if (j !== i) {
                         const b = atoms[j];
-                        const g = RULES_ARRAY[a[4]][b[4]];
+                        const g = settings.rulesArray[a[4]][b[4]];
                         if (g !== undefined) {
                             const dx = a[0] - b[0];
                             const dy = a[1] - b[1];
                             if (dx !== 0 || dy !== 0) {
                                 const d = dx * dx + dy * dy;
-                                if (d < cutOff) {
+                                if (d < settings.cutOff) {
                                     const F = g / Math.sqrt(d);
                                     fx += F * dx;
                                     fy += F * dy;
@@ -197,14 +247,14 @@
                     const dy = a[1] - pulse_y;
                     const d = dx * dx + dy * dy;
                     if (d > 0) {
-                        const F = 100. * pulse / d / time_scale;
+                        const F = 100. * pulse / d / settings.time_scale;
                         fx += F * dx;
                         fy += F * dy;
                     }
                 }
-                const vmix = (1. - viscosity);
-                a[2] = a[2] * vmix + fx * time_scale;
-                a[3] = a[3] * vmix + fy * time_scale;
+                const vmix = (1. - settings.viscosity);
+                a[2] = a[2] * vmix + fx * settings.time_scale;
+                a[3] = a[3] * vmix + fy * settings.time_scale;
                 a[0] += a[2]
                 a[1] += a[3]
 
@@ -234,64 +284,22 @@
         };
 
 
-        randomRules(); // Generate rules
-        flattenRules()
-        randomAtoms(500, true); // Create Atoms
+        // Generate Rules
+        randomRules()
 
-        var show_fps = false;
-        var lastT = Date.now();
-        var fps = 0;
-        window.addEventListener('keydown',
-            (e) => {
-                switch (e.code) {
-                    case 'KeyF':
-                        show_fps = !show_fps;
-                        break;
-                    case 'KeyR':
-                        randomRules();
-                        break;
-                    case 'KeyS':
-                        symmetricRules();
-                        break;
-                    case 'KeyP':
-                        randomAtoms(100, false);
-                        break;
-                    case 'KeyO':
-                        randomAtoms(500, true);
-                        break;
-                    case 'BracketRight':
-                        time_scale *= 1.1;
-                        break;
-                    case 'BracketLeft':
-                        time_scale /= 1.1;
-                        break;
-                    case 'Digit1':
-                        cutOff /= 1.1;
-                        break;
-                    case 'Digit2':
-                        cutOff *= 1.1;
-                        break;
-                    case 'KeyM':
-                        printRules();
-                        break;
-                    default:
-                        console.log(e.code);
-                }
-            });
-        window.addEventListener('click',
-            (e) => {
-                pulse = pulseDuration;
-                pulse_x = e.clientX;
-                pulse_y = e.clientY;
-            }
-        );
+        // Generate Atoms
+        const atoms = []
+        randomAtoms(settings.atomsPerColor, true)
+
+
+        setupClicks()
+        setupGUI()
+
+        console.log('settings', settings)
 
         // Update Frames
+        var lastT = Date.now();
         update();
-
-        function TwoDigits(x) {
-            return Math.floor(100. * x) / 100.;
-        }
 
         function update() {
             // Update Canvas Dimensions - if screen size changed
@@ -300,28 +308,16 @@
             applyRules();
             m.clearRect(0, 0, canvas.width, canvas.height);
             for (i = 0; i < atoms.length; ++i) {
-                draw(atoms[i][0], atoms[i][1], Colors[atoms[i][4]], 2);
+                draw(atoms[i][0], atoms[i][1], settings.colors[atoms[i][4]], 2);
             }
-            if (show_fps) {
-                var curT = Date.now();
-                if (curT > lastT) {
-                    const new_fps = 1000. / (curT - lastT);
-                    fps = fps * 0.8 + new_fps * 0.2;
-                    lastT = curT;
-                }
-                m.fillStyle = "white";
-                m.font = '32px serif';
-                m.fillText(TwoDigits(fps) + " FPS", 10, 36);
-                m.fillText("dt: " + TwoDigits(time_scale) + "  Cutoff:" + cutOff, 10, 96);
-                m.fillText("Atoms: " + atoms.length, 10, 130);
-                m.fillText("total_v: " + TwoDigits(total_v), 10, 200);
+            var curT = Date.now();
+            if (curT > lastT) {
+                const new_fps = 1000. / (curT - lastT);
+                settings.fps = Math.round(settings.fps * 0.8 + new_fps * 0.2)
+                lastT = curT;
             }
-            seed = seed + 1;;
-            if (pulse > 0) pulse -= 1;
-            if (total_v > 30. && time_scale > 5.) time_scale /= 1.1;
-            if (time_scale < 0.9) time_scale *= 1.01;
-            if (time_scale > 1.1) time_scale /= 1.01;
 
+            if (pulse > 0) pulse -= 1;
             // const inRange = (a) => 0 <= a[0] && a[0] < canvas.width && 0 <= a[1] && a[1] < canvas.height
             // console.log('inRange', atoms.filter(inRange).length)
 
